🔧 fix(styles): update alignment styles for flex layout ✨ feat(styles): add custom width classes for button elements 🔧 fix(styles): update flex layout styles for button container
🔨 refactor(styles): comment out unused flex properties in _layout.scss

--- a/src/styles/wpcore/_alignment.scss
+++ b/src/styles/wpcore/_alignment.scss
@@ -40,8 +40,15 @@
   justify-content: flex-end;
 }
 
+:where(.is-layout-flex) {
+  display: flex;
+  // flex-wrap: wrap;
+  gap: 1rem;
+}
+
 :where(.is-vertical) {
   flex-direction: column;
+  flex-wrap: nowrap;
 
   &:where(.is-content-justification-center) {
     align-items: center;
